# CMPT433-Bluetooth-Speaker

./: README.md
bluetooth-speaker-app/: CMakeLists.txt  CMakePresets.json  README.md  aarch64-linux-gnu.cmake
bluetooth-speaker-app/app/: CMakeLists.txt
bluetooth-speaker-app/app/include/app/: app_model.h  init.h  server.h  user_interface.h
bluetooth-speaker-app/app/src/: app_model.c  bt_agent.c  init.c  main.c  server.c  user_interface.c
bluetooth-speaker-app/binc/: CMakeLists.txt  agent.c  player.c  player.h
bluetooth-speaker-app/binc/lib/: bluetooth.c  bluetooth.h  gdbus.h  hci.h  iso.h  print.c  print.h  shell.c  shell.h  util.h  uuid.c  uuid.h
bluetooth-speaker-app/hal/: CMakeLists.txt
bluetooth-speaker-app/hal/include/hal/: audio_capture.h  bt_agent.h  button_state_machine.h  draw_stuff.h  i2c_init.h  image_loader.h  joystick.h  led_pwm.h  lg_gpio_samples_func.h  light_sensor.h  microphone.h  olive.h  rotary_encoder.h  time_util.h  whisper.h
bluetooth-speaker-app/hal/src/: audio_capture.c  bt_agent.c  bt_dbus.c  bt_player.c  button_state_machine.c  draw_stuff.c  i2c-init.c  i2c_init.c  image_loader.c  joystick.c  led_pwm.c  lg_gpio_samples_func.c  light_sensor.c  microphone.c  microphone.cpp  period_timer.c  rotary_encoder.c  time_util.c
bluetooth-speaker-app/lcd/: CMakeLists.txt  Makefile  readme_CN.txt  readme_EN.txt
bluetooth-speaker-app/lcd/examples/: LCD_1in54_test.c
bluetooth-speaker-app/lcd/lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
bluetooth-speaker-app/lcd/lib/LCD/: LCD_0in96.h  LCD_1in14.c  LCD_1in14.h  LCD_1in28.c  LCD_1in28.h  LCD_1in3.c  LCD_1in3.h  LCD_1in47.c  LCD_1in47.h  LCD_1in54.c  LCD_1in54.h  LCD_1in69.c  LCD_1in69.h  LCD_1in8.c  LCD_1in8.h  LCD_1in9.c  LCD_1in9.h  LCD_2inch.c  LCD_2inch.h  LCD_2inch4.c  LCD_2inch4.h
bluetooth-speaker-app/lgpio/: CMakeLists.txt  Makefile  lgCmd.c  lgDbg.c  lgDbg.h  lgExec.c  lgGpio.c  lgGpio.h  lgPthAlerts.c  lgPthAlerts.h  lgUtil.c  lgpio.h  rgpio.c  rgpio.h  rgpiod.c  rgs.c
bluetooth-speaker-app/test/: CMakeLists.txt
bluetooth-speaker-app/test/gdbus/: CMakeLists.txt  bt_dbus.c  bt_dbus.h  bt_player.c  dbus.c  main.c  notes.md  player.c  player.h
bluetooth-speaker-app/test/lcd/: CMakeLists.txt  lcd-test1.c  lcd-test2.c
bluetooth-speaker-app/test/rotary_encoder/: CMakeLists.txt  rotary-encoder-test1.c
bluetooth-speaker-app/ui/: CMakeLists.txt
bluetooth-speaker-app/ui/include/ui/: draw_text.h  draw_ui.h  load_image_assets.h
bluetooth-speaker-app/ui/src/: draw_text.c  draw_ui.c  load_image_assets.c
setup/: HardwareSetup.md  README.md
